--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ org.gradle.parallel=true
 	loader_version=0.14.11
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.4
 	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	archives_base_name = More Doors 1.19.3
 
 # Dependencies
 	fabric_version=0.68.1+1.19.3
