--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.parallel=true
 	loader_version=0.14.17
 
 # Mod Properties
-	mod_version = 1.4
+	mod_version = 1.4-Fabric
 	maven_group = com.example
 	archives_base_name = More Doors 1.19.4
 
