--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.1
-	loader_version=0.14.17
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20
+yarn_mappings=1.20+build.1
+loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.4-Fabric
-	maven_group = com.example
-	archives_base_name = More Doors 1.19.4
+mod_version=1.0.0
+maven_group=afraidmonster.moredoors
+archives_base_name=moredoors
 
 # Dependencies
-	fabric_version=0.75.3+1.19.4
+fabric_version=0.83.0+1.20
