--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -62,7 +62,7 @@ side="BOTH"
 modId="minecraft"
 mandatory=true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
-versionRange="1.20.5-1.21"
+versionRange="[1.20.5, 1.21)"
 ordering="NONE"
 side="BOTH"
 
