--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -42,7 +42,7 @@ authors="AfraidMonster" #optional
 #displayTest="MATCH_VERSION" # if nothing is specified, MATCH_VERSION is the default when clientSideOnly=false, otherwise IGNORE_ALL_VERSION when clientSideOnly=true (#optional)
 
 # The description text for the mod (multi line!) (#mandatory)
-description='''A simplistic mod that adds over 50 new doors to Minecraft'''
+description='''A lightweight Vanilla style mod that adds over 50 unique doors and trapdoors to Minecraft!'''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.moredoors]] #optional
 # the modid of the dependency
