--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ yarn_mappings=1.21+build.2
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.6
+mod_version=1.21-1.6-Fabric
 maven_group=afraidmonster.moredoors
-archives_base_name=more-doors
+archives_base_name=More Doors
 
 # Dependencies
 fabric_version=0.100.3+1.21
