--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 version = '1.19.4-1.6-Forge'
 group = 'com.afraidmonster.moredoors' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'More Doors'
+archivesBaseName = 'More-Doors'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
