--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -30,7 +30,7 @@ displayURL="https://www.curseforge.com/minecraft/mc-mods/moredoors" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="META-INF/moredoors.png" #optional
 # A text field displayed in the mod UI
-#credits="" #optional
+credits="JKT3CH-(Texture Support)" #optional
 # A text field displayed in the mod UI
 authors="AfraidMonster" #optional
 # Display Test controls the display for your mod in the server connection screen
