--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ version = mod_version
 group = mod_group_id
 
 base {
-    archivesName = "More Doors"
+    archivesName = "More-Doors"
 }
 
 // Mojang ships Java 21 to end users in 1.20.5+, so your mod should target Java 21.
