--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.14.19
 # Mod Properties
 mod_version = 1.19.4-1.6-Fabric
 maven_group = afraidmonster.moredoors
-archives_base_name = More Doors
+archives_base_name = More-Doors
 
 # Dependencies
 fabric_version=0.79.0+1.19.4
